--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@ ora {color: orange;}
 pur {color: purple;} 
 </style>
 <head>
-<title><red>Компьютерный сервис</red> Кривой Рог</title>
+<title>Компьютерный сервис Кривой Рог</title>
 </head>
