--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ body {
 <div id="data"></div>
 <script>
 (function () {
-var str = 'Телефоны',
+var str = '<h3>Телевизоры</h3>',
 	len = str.length,
 	i = 0,
 	tId = setInterval(function () {
