--- a/index.html
+++ b/index.html
@@ -33,15 +33,28 @@ body {
 </style>
 <div class="hit-the-floor">Ремонт бытовой техники в Кривом Роге</div>
 <div id="data"></div>
-<script>
-(function () {
-var str = '<h3>Телевизоры</h3>',
-	len = str.length,
-	i = 0,
-	tId = setInterval(function () {
-	  data.innerHTML += str[i++];
-	  if (i == len) clearInterval(tId);
-	}, 200);
-}());
-</script>
+<style>
+.typewriter {
+  overflow: hidden; /* Ensures the content is not revealed until the animation */
+  border-right: .15em solid orange; /* The typwriter cursor */
+  white-space: nowrap; /* Keeps the content on a single line */
+  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+  letter-spacing: .15em; /* Adjust as needed */
+  animation: 
+    typing 3.5s steps(40, end),
+    blink-caret .75s step-end infinite;
+}
+
+/* The typing effect */
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: orange; }
+}
+</style>
 
