--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ pur {color: purple;}
 </body>
 <style>
 .hit-the-floor {
-color: #fff;
+color: #ff3300;
 font-size: 5em;
 font-weight: bold;
 font-family: Helvetica;
@@ -57,4 +57,4 @@ body {
   50% { border-color: orange; }
 }
 </style>
-<div class="typewriter">Телевизоры</div>
+<h3 class="typewriter">Телевизоры</h3>
