--- a/index.html
+++ b/index.html
@@ -57,4 +57,4 @@ body {
   50% { border-color: orange; }
 }
 </style>
-<h2 class="typewriter">Телевизоры</h3>
+<h2 class="typewriter">Телевизоры , стиральные машины , холодильники , микроволновки.</h3>
