--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ body {
 </style>
     <div id="js2slideshow">
     <ul>
-     <li><img src="img/i1.jpg" width="165" height="123"></li>
+     <li><img src="http://www.ixbt.com/dvd/panasonic/tx-pr50vt50/front-l.jpg" width="165" height="123"></li>
      <li><img src="img/i2.jpg" width="165" height="123"></li>
      <li><img src="img/i3.jpg" width="165" height="123"></li>
      <li><img src="img/i4.jpg" width="165" height="123"></li>
