--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ pur {color: purple;}
 </style>
 <head>
 <title>Компьютерный сервис Кривой Рог</title>
+<link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body background=http://365psd.ru/images/backgrounds/bg-light-4869.png>
 </body>
