--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ body {
   background-color: #f1f1f1;
 }
 </style>
-<div class="hit-the-floor">Ремонт бытовой техники в Кривом Роге</div>
+<div class="hit-the-floor">Ремонт компьютеров и настройка Smart TV в Кривом Роге</div>
 <div id="data"></div>
 <style>
 .typewriter {
