--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ pur {color: purple;}
 <title>Компьютерный сервис Кривой Рог</title>
 <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
-<body background=http://365psd.ru/images/backgrounds/bg-light-4869.png>
+<body background=http://pattern4site.ru/download.php?pattern=images/grids/_rebig/10-fon-dlya-sayta.png>
  <style>
 .hit-the-floor {
 color: #ff3300;
