--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px
 </style>
 <div class="wrapper">
                <img src="https://matrason.ua/uploaded/Content_foto/blog_foto/Home-office-with-a-multitasking-desk-and-restrained-shelf-space.jpg">
-               <img src="images.vfl.ru/ii/1503210788/f77c44d6/18308057_m.jpg">
+               <img src="https://images.vfl.ru/ii/1503210788/f77c44d6/18308057_m.jpg">
 </div>
 <style>
     #js2slideshow {
